--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "./node_modules/.bin/webpack",
-    "build-project": "node ./node_modules/.bin/webpack"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack serve --open --entry ./index.html"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +14,8 @@
   "devDependencies": {
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.6",
-    "webpack-command": "^0.2.1"
+    "webpack": "^5.21.1",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
